# ROP

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
software/: CMakeLists.txt
software/src/: CMakeLists.txt  frames.cpp  jobs.cpp  jobs.h  main.cpp  terminalOutput.cpp  terminalOutput.h  window.cpp  winmain.cpp
software/src/imgui/: imconfig.h
software/src/qol/: CMakeLists.txt  clock.cpp  d7.hpp  idkwheretoputitsoitshere.cpp  multithread.cpp  qol.h  terminalOutput.cpp
software/src/sfml/: sfml.cpp  sfml.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  args.cpp  clock.cpp  core.h  multithread.cpp  terminalOutput.cpp
src/sfml/: CMakeLists.txt  sfml.cpp  sfml.h
thesis/inwork/: LICENSE  README.md  iso690-2022.csl  main.typ  thesis.typ  works.bib
